[package]
name = "raytracer"
version = "0.1.0"
authors = ["Kr Cen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
indicatif = "0.15"
threadpool = "1.8"
imageproc = "0.21"
rand = "0.8.3"
rusttype = "0.9"
raytracer_codegen = { path = "../raytracer_codegen" }
console = "0.15.0"
